--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/ba456"
     tools:context=".Fragment.HomeFragment"
     android:orientation="vertical"
     >
@@ -77,38 +78,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!--        <LinearLayout-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:background="@color/orange_btn_nav"-->
-        <!--            android:orientation="horizontal"-->
-        <!--            android:padding="10dp">-->
-
-        <!--            <LinearLayout-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:orientation="horizontal">-->
-
-        <!--                <ImageView-->
-        <!--                    android:id="@+id/img_avt"-->
-        <!--                    android:layout_width="60dp"-->
-        <!--                    android:layout_height="60dp"-->
-        <!--                    android:src="@drawable/avatar" />-->
-
-        <!--                <TextView-->
-        <!--                    android:id="@+id/tv_name"-->
-        <!--                    android:layout_width="wrap_content"-->
-        <!--                    android:layout_height="wrap_content"-->
-        <!--                    android:layout_gravity="center"-->
-        <!--                    android:layout_marginLeft="20dp"-->
-        <!--                    android:text="Xin chào: Nguyễn Đức Tùng"-->
-        <!--                    android:textColor="@color/black" />-->
-        <!--            </LinearLayout>-->
-        <!--        </LinearLayout>-->
-
-
-
-
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/id_pagerBanner"
             android:layout_width="match_parent"
@@ -160,6 +129,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recy_Type"
                 android:layout_width="match_parent"
+                android:background="@drawable/back1"
                 android:layout_height="120dp"
                 android:layout_margin="8dp" />
         </androidx.cardview.widget.CardView>
@@ -194,11 +164,13 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:layout_margin="8dp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recy_Product"
                 android:layout_width="match_parent"
+                android:background="@drawable/back1"
                 android:layout_height="210dp"
                 android:layout_margin="8dp" />
         </androidx.cardview.widget.CardView>
