--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="gray">#CCC6C6</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#F44336</color>
-    <color name="orange_btn_nav">#EC6923</color>
+    <color name="orange_btn_nav">#9527B0</color>
 </resources>
